--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /zad_1/zad1/build/
 /zad_1/Zad2/nbproject/private/
 /zad_1/Zad2/build/
+/Zadanie3/nbproject/private/
+/Zadanie3/build/
+/dupa/nbproject/private/
+/dupa/build/
