--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@
 /17.02/Zad3/build/
 /17.02/Zad.4/nbproject/private/
 /17.02/Zad.4/build/
+/17.02/zad5/nbproject/private/
+/17.02/zad56/nbproject/private/
+/17.02/zad56/build/
+/17.02/zad5/build/
