--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@
 /17.02/zad56/nbproject/private/
 /17.02/zad56/build/
 /17.02/zad5/build/
+/17.02/Sortowanie/nbproject/private/
+/17.02/Sortowanie/build/
+/17.02/CountingSortEnhanced/nbproject/private/
+/17.02/CountingSortEnhanced/build/
