--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,11 @@
 /17.02/CountingSortEnhanced/build/
 /17.02/SortowaniePrzezScalanie/nbproject/private/
 /17.02/SortowaniePrzezScalanie/build/
+/17.02/Main/nbproject/private/
+/17.02/Main/build/
+/20.02/20zad1/nbproject/private/
+/20.02/20zad1/build/
+/20.02/java20_2/nbproject/private/
+/20.02/java20_2/build/
+/20.02/java20_6/nbproject/private/
+/20.02/java20_6/build/
