--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@
 /20.02/java20_2/build/
 /20.02/java20_6/nbproject/private/
 /20.02/java20_6/build/
+/20.02/max/nbproject/private/
+/20.02/max/build/
