--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@
 /20.02/java20_6/build/
 /20.02/max/nbproject/private/
 /20.02/max/build/
+/20.02/zad20.8/nbproject/private/
+/20.02/zad20.8/build/
