--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@
 /20.02/max/build/
 /20.02/zad20.8/nbproject/private/
 /20.02/zad20.8/build/
+/20.02/Java_9/nbproject/private/
+/20.02/Java_9/build/
