--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@
 /20.02/zad20.8/build/
 /20.02/Java_9/nbproject/private/
 /20.02/Java_9/build/
+/20.02/zad9a/nbproject/private/
+/20.02/zad9a/build/
